JDK 21 runtime support (server verified booting with mods)
FMLLaunchWrapper: URLClassLoader-cast-free bootstrap populating Launch statics, works 8-21. FMLTweaker: tolerate uninstallable SecurityManager (deprecated UOE on 18+). ClassPatchManager: prefer embedded Pack200-free binpatches.jar (build.gradle embeds it via JDK8 Pack200 at package time). ASM 5.2 -> 9.6 trio in 1.7.10 jsons; visitors to ASM9 API; EventSubscriptionTransformer uses getObjectType; JarDiscoverer skips MR-jar/module-info entries. ObjectHolderTransformer strips final from holder fields at load; Refs write via plain set with Unsafe fallback for vanilla finals. EnumHelper: MethodHandles enum construction (legacy fallback on 8), Unsafe field writes. Server boots to Done on JDK 21; test mod proves addToolMaterial + final @ObjectHolder injection.